# PWA_Notes

./: .dockerignore  .gitignore  Procfile  README.md  docker-compose.local.yml  docker-compose.yml  readme.md  requirements.txt
alembic/: env.py
alembic/versions/: 0052f3d8b9ba_adding_tag_4.py  029e59bbe6c3_adding_tag_4.py  0712b8e1581f_shared_notes.py  0902b90e5b7f_user.py  0b56860e6c6f_back_populates.py  0f0117ca7294_shared_notes.py  0fb3107786bf_adding_tag.py  12f104ccf40b_changing_tag.py  13a7db048542_new_migration.py  1727084f57a3_adding_tag_to_note.py  17b31a1febbb_adding_tag_2.py  1803be01ac3b_adding_tag_4.py  1f3b98a6a297_shared_notes.py  24ba355c649b_adding_tag.py  291e5987b853_shared_notes.py  2b8660289d66_init.py  2d9a396d1d1f_user.py  316ad74d0b9b_adding_tag_4.py  3b0bc15b1a67_shared_notes.py  4154e4b4be65_adding_tag_3.py  4254a0c5db49_changing_models.py  4579eeef5c3c_adding_tag_4.py  4c05ccfc8d8f_adding_tag.py  4f73ad516b80_shared_notes.py  5292c522d05d_init.py  57dac8388973_shared_notes.py  59824a2832a4_shared_notes.py  (+26 more)
app/: main.py  requirements.txt
backend/: Dockerfile
backend/app/: alembic.ini  prestart.sh  pyproject.toml
backend/app/alembic/: script.py.mako
backend/app/app/: main.py
backend/app/app/core/: config.py
backend/app/app/crud/: __init__.py  base.py  crud_note.py  crud_user.py
backend/app/app/db/: base.py  base_class.py  init_db.py  session.py
backend/app/app/models/: note.py  user.py
backend/app/app/schemas/: __init__.py  note.py  user.py
pwa_notes_backend/: .gitignore  docker-compose.yml  main.py  requirements.txt
(+39 files in other folders)
