[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["patrykwys98 <patrykwys98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.20.0"
fastapi = "^0.87.0"
python-multipart = "^0.0.5"
pydantic = "^1.10.2"
jinja2 = "^3.1.2"
sqlalchemy = "^1.4.44"
alembic = "^1.8.1"
tenacity = "^8.1.0"
httpx = "^0.23.1"
passlib = "^1.7.4"
python-jose = "^3.3.0"
psycopg2-binary = "^2.9.5"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
